# cnm-rs

./: Cargo.toml  Cross.toml  Dockerfile  build.rs
.cargo/: config.toml
pkg/mod/cache/download/sumdb/sum.golang.org/lookup/golang.org/x/tools/: gopls@v0.12.4
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/0/x072/556.p/: 88
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/1/283.p/: 108
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/2/001.p/: 27
pkg/sumdb/sum.golang.org/: latest
scripts/: admission-controller-tls.crt  admission-controller-tls.key  admission_controller.yaml.tpl  admission_extfile.cnf  admission_setup.sh  ca.crt  ca.key  ca.srl
src/: lib.rs  main.rs
src/admission/: admission.rs  main.rs  mod.rs
src/cert/: cert.rs
src/cnm/: main.rs
src/controllers/: bgp_router.rs  controllers.rs  interface.rs  ip_address.rs  mod.rs  pool.rs  routing_instance.rs  vrrp.rs
src/controllers/crpd/: bgp_router_group.rs  crpd.rs  crpd_group.rs  interface_group.rs  junos_configuration.rs  mod.rs  routing_instance_group.rs  vrrp.rs  vrrp_group.rs
src/controllers/crpd/junos/: bgp.rs  client.rs  common.rs  evpn.rs  family.rs  interface.rs  junos.rs  mod.rs  protocol.rs  routing_instance.rs  routing_options.rs
src/controllers/crpd/junos/proto/: jnx.jet.authentication.rs  jnx.jet.common.rs  jnx.jet.management.rs  jnx_authentication_service.proto  jnx_common_base_types.proto  jnx_management_service.proto  mod.rs
src/crpd_init/: main.rs
src/resources/: bgp_router.rs  bgp_router_group.rs  interface.rs  interface_group.rs  ip_address.rs  mod.rs  pool.rs  resources.rs  routing_instance.rs  routing_instance_group.rs  virtual_network.rs  vrrp.rs  vrrp_group.rs
src/resources/crpd/: crpd.rs  crpd_group.rs  mod.rs
yaml/: bgp_router_group.yaml  bgp_router_group_2.yaml  bgp_router_group_default.yaml  bgp_router_group_ri.yaml  crpd.yaml  crpd_group.yaml  interface-group-eth0.yaml  interface-group-lima0.yaml  interface-group.yaml  ip1.yaml  ip2.yaml  ip3.yaml  pool.yaml  routing-instance.yaml  routing_instance_group.yaml  vrrp-group-lima0.yaml  vrrp-group.yaml
