[package]
name = "cnm-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.84.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.18.0", features = ["v1_26","schemars"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.9.19"
tokio = { version = "1.14.0", features = ["full"] }
anyhow = "1.0.44"
futures = "0.3.17"
garde = { version = "0.11.2", default-features = false, features = ["derive"] }
either = "1.6.1"
schemars = "0.8.6"
tracing = "0.1.36"
tracing-subscriber = "0.3.3"
async-trait = "0.1.71"
json-patch = "1.0.0"
